--- a/models/staging/jaffleshop/stg_jaffle_shop.yml
+++ b/models/staging/jaffleshop/stg_jaffle_shop.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
     - name: stg_customers
+      description: One unique customer per row
       columns:
         - name: customer_id
+          description: Primary key for stg_customers
           tests:
             - unique
             - not_null
@@ -14,6 +16,7 @@ models:
             - unique
             - not_null
         - name: status
+          description: '{{ doc("order_status") }}'
           tests:
             - accepted_values:
                 values: ['returned', 'completed', 'shipped', 'placed', 'return_pending'] 
@@ -22,4 +25,10 @@ models:
             - relationships:
                 to: ref('stg_customers')
                 field: customer_id
+    - name: stg_payments
+      columns:
+        - name: status
+          description: '{{ doc("payment_status") }}'
+        - name: payment_method
+          description: '{{ doc("payment_methods") }}'
     
